crates/hinoki-parser/testdata/output/hinoki_parser__test__variables.snap
---
source: crates/hinoki-parser/src/lib.rs
expression: snapshot_parsing(contents)
---
Error {
    variant: ParsingError {
        positives: [
            expr,
            set,
            return,
            declaration_stmt,
            add,
            subtract,
            multiply,
            divide,
            power,
            modulus,
            shift_left,
            shift_right,
            bitwise_and,
            bitwise_or,
            xor,
            not,
            less_than,
            greater_than,
            equal,
            less_than_or_equal,
            greater_than_or_equal,
            not_equal,
            call_operation,
            index_access_operation,
        ],
        negatives: [],
    },
    location: Pos(
        15,
    ),
    line_col: Pos(
        (
            3,
            4,
        ),
    ),
    path: None,
    line: "\ta = 5;",
    continued_line: None,
}

 --> 3:4
  |
3 | 	a = 5;
  | 	  ^---
  |
  = expected expr, set, return, declaration_stmt, add, subtract, multiply, divide, power, modulus, shift_left, shift_right, bitwise_and, bitwise_or, xor, not, less_than, greater_than, equal, less_than_or_equal, greater_than_or_equal, not_equal, call_operation, or index_access_operation
